<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mayarafelix.icemoviesapp.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/DetailActivityPoster"
                android:id="@+id/movieDetailPoster" />

            <ProgressBar
                style="@style/ProgressBar"
                android:id="@+id/progressbar"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <!-- Title -->

        <TextView
            style="@style/DetailActivityTitle"
            android:id="@+id/movieDetailTitle"
            android:layout_below="@+id/imageHolder" />

        <!-- Year -->

        <TextView
            style="@style/DetailActivityLabel"
            android:id="@+id/movieDetailYearLbl"
            android:layout_below="@id/movieDetailTitle"
            android:layout_alignEnd="@id/movieDetailDirectorLbl"
            android:layout_alignTop="@id/movieDetailYear"
            android:layout_alignBottom="@id/movieDetailYear"
            android:text="@string/movie_year" />

        <TextView
            style="@style/DetailActivityContent"
            android:id="@+id/movieDetailYear"
            android:layout_below="@id/movieDetailTitle"
            android:layout_toEndOf="@id/movieDetailYearLbl" />

        <!-- Genre -->

        <TextView
            style="@style/DetailActivityLabel"
            android:id="@+id/movieDetailGenreLbl"
            android:layout_below="@id/movieDetailYearLbl"
            android:layout_alignEnd="@id/movieDetailDirectorLbl"
            android:layout_alignTop="@id/movieDetailGenre"
            android:layout_alignBottom="@id/movieDetailGenre"
            android:text="@string/movie_genre"/>

        <TextView
            style="@style/DetailActivityContent"
            android:id="@+id/movieDetailGenre"
            android:layout_below="@id/movieDetailYear"
            android:layout_toEndOf="@id/movieDetailGenreLbl" />

        <!-- Actors -->

        <TextView
            style="@style/DetailActivityLabel"
            android:id="@+id/movieDetailActorsLbl"
            android:text="@string/movie_actors"
            android:layout_below="@id/movieDetailGenreLbl"
            android:layout_alignEnd="@id/movieDetailDirectorLbl"
            android:layout_alignTop="@id/movieDetailActors"
            android:layout_alignBottom="@id/movieDetailActors"/>

        <TextView
            style="@style/DetailActivityContent"
            android:id="@+id/movieDetailActors"
            android:layout_below="@id/movieDetailGenre"
            android:layout_toEndOf="@id/movieDetailActorsLbl" />

        <!-- Director -->

        <TextView
            style="@style/DetailActivityLabel"
            android:id="@+id/movieDetailDirectorLbl"
            android:layout_below="@id/movieDetailActorsLbl"
            android:layout_alignTop="@id/movieDetailDirector"
            android:layout_alignBottom="@id/movieDetailDirector"
            android:text="@string/movie_director" />

        <TextView
            style="@style/DetailActivityContent"
            android:id="@+id/movieDetailDirector"
            android:layout_below="@id/movieDetailActors"
            android:layout_toEndOf="@id/movieDetailDirectorLbl" />

        <!-- Plot -->

        <TextView
            style="@style/DetailActivityLabel"
            android:id="@+id/movieDetailPlotLbl"
            android:layout_below="@id/movieDetailDirectorLbl"
            android:layout_alignEnd="@id/movieDetailDirectorLbl"
            android:layout_alignBottom="@id/movieDetailPlot"
            android:layout_alignTop="@id/movieDetailPlot"
            android:text="@string/movie_plot" />

        <TextView
            style="@style/DetailActivityContent"
            android:id="@+id/movieDetailPlot"
            android:layout_toEndOf="@id/movieDetailPlotLbl"
            android:layout_below="@id/movieDetailDirector"
            android:singleLine="false" />

    </RelativeLayout>
</ScrollView>

